syntax = "proto3";
package ETHotfix;

message C2R_Login // IRequest
{
	int32 RpcId = 90;
	string	Account	 = 1;	// 帐号
	string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key	    = 2;
}

message C2G_LoginGate // IRequest
{
	int32 RpcId = 90;
	int64 Key = 1;	// 帐号
}

message G2C_LoginGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 PlayerId = 1;
}

message G2C_TestHotfixMessage // IMessage
{
	string Info = 1;
}

message C2M_TestActorRequest // IActorLocationRequest
{
	int32 RpcId = 90;
	int64 ActorId = 91;
	string Info = 1;
}

message M2C_TestActorResponse // IActorLocationResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Info = 1;
}

message PlayerInfo // IMessage
{
	int32 RpcId = 90;
	string UserID = 1;
	string Name = 2;
	string HeadIcon = 3;
	int32 RoomCard = 4;
	int32 Sex = 5;
	int32 State = 6;
}

message C2G_PlayerInfo // IRequest
{
	int32 RpcId = 90;
}

message G2C_PlayerInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	PlayerInfo PlayerInfo = 1;
	repeated PlayerInfo PlayerInfos = 2;
    repeated string TestRepeatedString = 3;
    repeated int32 TestRepeatedInt32 = 4;
    repeated int64 TestRepeatedInt64 = 5;
}

	//Test注册协议
message C2G_TestPlayerInfo // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message G2C_TestPlayerInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}
//-----------------------------------------以下是牛牛协议-----------------------------------------
//登录
message C2R_CowCowLogin // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message R2C_CowCowLogin // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key = 2;
}
//注册
message C2R_CowCowRegister // IRequest
{
	int32 RpcId = 90;
	string Account = 1;
	string Password = 2;
}

message R2C_CowCowRegister // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key = 2;
}
//登录消息服务器
message C2G_CowCowLoginGate // IRequest
{
	int32 RpcId = 90;
	int64 Key = 1;	// 帐号
}

message G2C_CowCowLoginGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 UserID = 1;
	string NickName = 2;
	string HeadIcon = 3;
	int32 Sex = 4;
	int32 Diamond = 5;
}

message GamerInfo // IMessage
{
	int32 RpcId = 90;
	int64 UserID = 1;
	int32 Coin = 2;
	string Name = 3;
	string HeadIcon = 4;
	int32 Sex = 5;
	int32 Status = 6;
	int32 SeatID = 7;
}

message C2G_CowCowCreateGameRoomGate // IRequest
{
	int32 RpcId = 90;
	int64 UserID = 1;
	string Name = 2;
	int32 Bureau = 3;
	int32 RuleBit = 4;
}

message G2C_CowCowCreateGameRoomGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string GameName = 1;
	int32 Bureau = 2;
	int32 RuleBit = 3;
	string RoomID = 4;
	GamerInfo GamerInfo = 5;
}

message C2G_CowCowJoinGameRoomGate // IRequest
{
	int32 RpcId = 90;
	int64 UserID = 1;
	string RoomID = 2;
}

message G2C_CowCowJoinGameRoomGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string GameName = 1;
	int32 Bureau = 2;
	int32 RuleBit = 3;
	string RoomID = 4;
	int64 UserID = 5;
}

message Actor_CowCowJoinGameRoomGroupSend // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 94;
	repeated GamerInfo GamerInfo = 1;
	int32 SeatID = 2;
}

message C2M_CowCowGamerReady // IRequest
{
	int32 RpcId = 90;
	string RoomID = 1;
	int32 SeatID = 2;
}

message M2C_CowCowGamerReady // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message Actor_CowCowGamerReady // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 94;
	repeated int32 SeatIDs = 1;
}

message Actor_CowCowRoomDealCards // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 94;
	repeated int32 Cards = 1;
}

message C2M_CowCowGamerSubmitCardType // IRequest
{
	int32 RpcId = 90;
	string RoomID = 1;
	int32 SeatID = 2;
	int32 MaxCard = 3;
	int32 CardType = 4;
	int32 FlowerColor = 5;
	int32 CowNumber = 6;
	repeated int32 Cards = 7;
}

message M2C_CowCowGamerSubmitCardType // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message Actor_CowCowGamerSubmitCardType // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 94;
	repeated int32 SeatIDs = 1;
}

message CowCowSmallSettlementInfo // IMessage
{
	int32 SeatID = 1;
	repeated int32 Cards = 2;
	int32 CardsType = 3;
	int32 BetCoin = 4;
	int32 LoseWin = 5;
	int32 CowNumber = 6;
}

message Actor_CowCowRoomOpenCardsAndSettlement // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 94;
	repeated CowCowSmallSettlementInfo SmallSettlemntInfo = 1;
}

message C2G_CowCowPing // IRequest
{
	int32 RpcId = 90;
}

message G2C_CowCowPing // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}